# serializer version: 1
# name: test_codegen_databricks_field_types
  '''
  from semolina import Dimension, Fact, Metric, SemanticView
  
  
  class SalesView(SemanticView, view="sales_view"):
      revenue = Metric[int | None]()
      cost = Metric[int | None]()
      country = Dimension[str]()
      region = Dimension[str]()
  
  '''
# ---
# name: test_codegen_file_backed_duckdb
  '''
  from semolina import Dimension, Fact, Metric, SemanticView
  
  
  class SalesView(SemanticView, view="sales_view"):
      unit_price = Fact[int]()
      country = Dimension[str]()
      region = Dimension[str]()
      revenue = Metric[int | None]()
      cost = Metric[int | None]()
  
  
  '''
# ---
# name: test_codegen_snowflake_field_types
  '''
  import datetime
  
  from semolina import Dimension, Fact, Metric, SemanticView
  
  
  class SalesView(SemanticView, view="sales_view"):
      revenue = Metric[int | None]()
      country = Dimension[str]()
      date_key = Fact[datetime.date]()
  
  '''
# ---
